--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.flennn</groupId>
-    <artifactId>jackpotduel</artifactId>
+    <artifactId>JackpotDuel</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>jackpotduel</name>
+    <name>JackpotDuel</name>
 
     <properties>
         <java.version>21</java.version>
